tests/parser_samples/valid/inline_macros_def.mas
%mi mi1 a;
%mi mi2(a) a | b | c;

%i i1 { !nop; }