tests/parser_samples/invalid/root/1.mas
%mi a a;
%m b {
    b;
}